# Huffman-coding-compressor

./: .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.mjs  tsconfig.app.json  tsconfig.node.json
cpp/: CMakeLists.txt  build.bat
cpp/include/: huffman.hpp  image_optimizer.hpp  presentation_optimizer.hpp
cpp/src/: emscripten_main.cpp  huffman.cpp  image_optimizer.cpp  presentation_optimizer.cpp
src/app/: App.tsx
src/app/components/: huffman.ts  image-optimizer.ts  presentation-optimizer.ts
src/styles/: tailwind.css
src/wasm/: daaWrapper.ts  daa_core.js  daa_core.wasm  index.ts
